# dalia

./: .gitignore  Cargo.toml  LICENSE.txt  README.md  TODO.txt
src/: command.rs  lexer.rs  lib.rs  main.rs  parser.rs
src/parser/: lexer.rs  mod.rs
tests/: main.rs
